[project]
name = "gpu-test"
version = "0.1.0"
description = "Intel GPU Test"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0+xpu",
    "torchvision==0.21.0+xpu",
    "torchaudio==2.6.0+xpu",
    "pytorch-triton-xpu"
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-xpu" }
torchvision = { index = "pytorch-xpu" }
torchaudio = { index = "pytorch-xpu" }
pytorch-triton-xpu = { index = "pytorch-xpu" }
